remove unused import + refactor code in GoalProgressNotificationScheduler